--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <h1>Welcome to My Wandering Eye</h1>
-  <p>This is the beginning of my dreamy little corner of the internet.</p>
-  <p>More thoughts, photos, and playlists coming soon...</p>
+  <p>Lets share some looks...</p>
 </body>
 </html>
+<p>Idk how i did this without knowing to code but here we r </p>
