--- a/index.html
+++ b/index.html
@@ -2,35 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Wandering Eye</title>
-  <style>
-    body {
-      font-family: 'Georgia', serif;
-      background-color: #fdf6f0;
-      color: #333;
-      padding: 40px;
-      max-width: 700px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 2.5em;
-      color: #ba6c79;
-    }
-    p {
-      line-height: 1.6;
-    }
-    a {
-      color: #a05a78;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <h1>Welcome to My Wandering Eye</h1>
   <p>Lets share some looks...</p>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="#thoughts">Thoughts</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#playlist">Playlists</a></li>
+    </ul>
+  </nav>
+
+  <!-- Thoughts Section -->
+  <section id="thoughts">
+    <h2>Thoughts</h2>
+    <p>Random thoughts and wanders</p>
+  </section>
+
+  <!-- Gallery Section -->
+  <section id="gallery">
+    <h2>Gallery</h2>
+  </section>
+
+  <!-- Playlists Section -->
+  <section id="playlist">
+    <h2>Playlists</h2>
+    <iframe src="https://www.youtube.com/embed/your_video_id" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>More reviews on the go..</p>
+  </footer>
 </body>
 </html>
-<p>Idk how i did this without knowing to code but here we r </p>
